Variable and function comments are resolved
