# src/app/authentication/docs/swagger.json
@@ -8,8 +8,13 @@
     },
     "host": "localhost:8080",
     "paths": {
-        "/changepassword": {
+        "/v1/change-password": {
             "patch": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Change a user's password",
                 "consumes": [
                     "application/json"
